day-two/front/front-service.yml
apiVersion: v1
kind: Service
metadata:
  name: front-service
spec:
  selector:
    app: front
  ports:
    - protocol: TCP
      port: 80 # entry service port
      targetPort: 8080 # entry pod port
